--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "homebridge-tesla",
-  "version": "0.7.0",
-  "description": "Tesla support for Homebridge: https://github.com/nfarina/homebridge",
-  "license": "ISC",
+  "name": "homebridge-selve",
+  "version": "0.1.0",
+  "description": "Selve Remote Shutter Support for Homebridge: https://github.com/nfarina/homebridge",
+  "license": "MIT",
   "keywords": [
     "homebridge-plugin"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/nfarina/homebridge-tesla.git"
+    "url": "git://github.com/tfohlmeister/homebridge-selve.git"
   },
   "bugs": {
-    "url": "http://github.com/nfarina/homebridge-tesla/issues"
+    "url": "http://github.com/tfohlmeister/homebridge-selve/issues"
   },
   "engines": {
     "node": ">=0.12.0",
