--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "teslajs": "^2.1.45"
+    "serialport": "^7.1.4",
+    "xmldoc": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
