--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "fast-xml-parser": "^3.12.14",
     "serialport": "^7.1.4",
     "xmldoc": "^1.1.2"
   },
