--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "fast-xml-parser": "^3.12.14",
+    "seq-queue": "0.0.5",
     "serialport": "^7.1.4",
     "xmldoc": "^1.1.2"
   },
