--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-selve",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "description": "Selve Remote Shutter Support for Homebridge: https://github.com/nfarina/homebridge",
   "license": "MIT",
   "keywords": [
@@ -19,7 +19,8 @@
   },
   "main": "dist/index.js",
   "files": [
-    "dist"
+    "dist",
+    "config.schema.json"
   ],
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
@@ -36,12 +37,11 @@
     "prettier": "^1.16.4",
     "rollup": "^0.67.1",
     "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-node-resolve": "^3.4.0"
   },
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "rm -rf dist/* && npm run build"
   }
 }
