--- a/package.json
+++ b/package.json
@@ -23,25 +23,22 @@
     "config.schema.json"
   ],
   "dependencies": {
-    "@babel/polyfill": "^7.8.7",
     "fast-xml-parser": "^3.16.0",
     "seq-queue": "0.0.5",
     "serialport": "^7.1.5",
     "xmldoc": "^1.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/preset-typescript": "^7.1.0",
-    "prettier": "^1.16.4",
-    "rollup": "^0.67.1",
-    "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-node-resolve": "^3.4.0"
+    "@types/node": "^13.13.4",
+    "homebridge": "^1.0.0",
+    "rimraf": "^3.0.2",
+    "typescript": "^3.8.3"
   },
   "scripts": {
-    "dev": "rollup -c -w",
-    "build": "rollup -c",
-    "prepublishOnly": "rm -rf dist/* && npm run build"
+    "clean": "rimraf ./dist",
+    "watch": "tsc -w",
+    "build": "npm run clean && tsc",
+    "prepublishOnly": "npm run clean && npm run build",
+    "postpublish": "npm run clean"
   }
 }
