--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,22 @@
 {
 	"compilerOptions": {
-		// Target latest version of ECMAScript.
-		"target": "esnext",
-		// Allow features like dynamic import().
-		"module": "esnext",
-		// Search under node_modules for non-relative imports.
-		"moduleResolution": "node",
-		// Process & infer types from .js files.
-		"allowJs": false,
-		// Don't emit; allow Babel to transform files.
-		"noEmit": true,
-		// Enable strictest settings like strictNullChecks & noImplicitAny.
-		"strict": true,
-		// Disallow features that require cross-file information for emit.
-		"isolatedModules": true,
-		// Allow importing non-TS files as "any".
-		"noImplicitAny": false,
-		// Import non-ES modules as default imports.
-		"esModuleInterop": true,
-		// Allow fancy language features.
-		"lib": ["esnext"]
+	  "target": "ES2018",
+	  "module": "commonjs",
+	  "lib": [
+		"ES2015",
+		"ES2016",
+		"ES2017",
+		"ES2018"
+	  ],
+	  "sourceMap": true,
+	  "rootDir": "src",
+	  "outDir": "dist",
+  
+	  "strict": true,
+	  "esModuleInterop": true,
+	  "forceConsistentCasingInFileNames": true
 	},
 	"include": [
-		"src"
+	  "src"
 	]
-}
+  }  
