--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   ],
   "dependencies": {
     "fast-xml-parser": "^3.16.0",
-    "seq-queue": "0.0.5",
+    "queue": "^6.0.1",
     "serialport": "^7.1.5",
     "xmldoc": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^13.13.4",
+    "@types/serialport": "^8.0.0",
     "homebridge": "^1.0.0",
     "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
