--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,14 @@
   
 	  "strict": true,
 	  "esModuleInterop": true,
-	  "forceConsistentCasingInFileNames": true
+	  "forceConsistentCasingInFileNames": true,
+	  "baseUrl": ".",
+	  "paths": {
+		"*": [
+			"node_modules/*",
+			"src/types/*"
+		]
+	  }
 	},
 	"include": [
 	  "src"
