--- a/.github/workflows/npmpublish-prerelease.yml
+++ b/.github/workflows/npmpublish-prerelease.yml
@@ -26,9 +26,11 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-          registry-url: https://npm.pkg.github.com/
-          always-auth: true
-      - run: npm ci
-      - run: npm publish --tag next
+      - name: Install dependencies
+        run: |
+          echo "//npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN" > ~/.npmrc
+          npm ci
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - name: Publish
+        run: npm publish --tag next
