--- a/.github/workflows/npmpublish-prerelease.yml
+++ b/.github/workflows/npmpublish-prerelease.yml
@@ -32,4 +32,4 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - name: Publish
-        run: npm publish --registry npm.pkg.github.com --tag next
+        run: npm ci && npm publish --tag next
