--- a/package.json
+++ b/package.json
@@ -37,21 +37,18 @@
     "@types/node": "^13.13.4",
     "@types/serialport": "^8.0.0",
     "concurrently": "^5.2.0",
-    "homebridge": "^1.0.0",
+    "homebridge": "^1.0.4",
     "nodemon": "^2.0.3",
-    "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "clean": "rimraf ./dist",
+    "clean": "rm -rf ./dist",
     "watch-ts": "tsc -w",
-    "watch-node": "nodemon dist/**/*.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
     "build": "npm run clean && tsc",
-    "debug": "npm run build && npm run watch-debug",
-    "serve-debug": "npx --node-arg=--inspect-brk homebridge -D",
+    "debug": "npm run build && npm link && npm run watch-debug",
+    "serve-debug": "npx --node-arg=\"--inspect-brk\" homebridge -D -I",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
-    "prepublishOnly": "npm run clean && npm run build",
+    "version": "npm run clean && npm run build",
     "postpublish": "npm run clean"
   }
 }
