--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^13.13.4",
     "@types/serialport": "^8.0.0",
     "concurrently": "^5.2.0",
+    "generate-changelog": "^1.8.0",
     "homebridge": "^1.0.4",
     "nodemon": "^2.0.3",
     "typescript": "^3.8.3"
@@ -45,9 +46,9 @@
     "clean": "rm -rf ./dist",
     "watch-ts": "tsc -w",
     "build": "npm run clean && tsc",
-    "debug": "npm run build && npm link && npm run watch-debug",
-    "serve-debug": "npx homebridge -D",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "debug": "npm run build && npm link && npm run watch",
+    "serve": "npx homebridge -D || true",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve\"",
     "version": "npm run clean && npm run build",
     "postpublish": "npm run clean"
   }
