--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "url": "http://github.com/tfohlmeister/homebridge-selve/issues"
   },
   "engines": {
-    "homebridge": ">=1.0.0"
+    "node": ">=14.18.1",
+    "homebridge": ">=1.3.5"
   },
   "main": "dist/selve-platform.js",
   "files": [
@@ -30,27 +31,28 @@
   "dependencies": {
     "fast-xml-parser": "^3.17.4",
     "seq-queue": "0.0.5",
-    "serialport": "^9.0.2",
+    "serialport": "^9.2.4",
     "xmldoc": "^1.1.2"
   },
   "devDependencies": {
-    "@types/node": "^14.14.5",
-    "@types/serialport": "^8.0.1",
-    "concurrently": "^5.3.0",
+    "@types/node": "^16.10.9",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "@types/serialport": "^8.0.2",
+    "eslint": "^8.0.1",
+    "homebridge": "^1.3.5",
     "generate-changelog": "^1.8.0",
-    "homebridge": "^1.1.6",
     "nodemon": "^2.0.6",
     "rimraf": "^3.0.2",
-    "typescript": "^4.0.5"
+    "typescript": "^4.4.4",
+    "ts-node": "^10.3.0"
   },
   "scripts": {
     "clean": "rimraf ./dist",
-    "watch-ts": "tsc -w",
-    "build": "npm run clean && tsc",
-    "debug": "npm run build && npm link && npm run watch",
-    "serve": "npx homebridge -D || true",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve\"",
-    "version": "npm run clean && npm run build && generate-changelog && git add CHANGELOG.md",
-    "postpublish": "npm run clean"
+    "lint": "eslint src/**.ts --max-warnings=0",
+    "watch": "npm run build && npm link && nodemon",
+    "build": "rimraf ./dist && tsc",
+    "prepublishOnly": "npm run lint && npm run build",
+    "version": "npm run clean && npm run build && generate-changelog && git add CHANGELOG.md"
   }
 }
