--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,17 @@
 {
-	"compilerOptions": {
-	  "target": "ES2018",
-	  "module": "commonjs",
-	  "lib": [
-		"ES2015",
-		"ES2016",
-		"ES2017",
-		"ES2018"
-	  ],
-	  "sourceMap": false,
-	  "rootDir": "src",
-	  "outDir": "dist",
-	  "strict": true,
-	  "esModuleInterop": true,
-	  "forceConsistentCasingInFileNames": true,
-	  "baseUrl": ".",
-	  "paths": {
-		"*": [
-			"node_modules/*",
-			"src/types/*"
-		]
-	  }
-	},
-	"include": [
-	  "src"
-	]
-  }  
+  "compilerOptions": {
+    "target": "ES2018", // ~node10
+    "module": "commonjs",
+    "lib": ["es2015", "es2016", "es2017", "es2018"],
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "noImplicitAny": false
+  },
+  "include": ["src/"],
+  "exclude": ["**/*.spec.ts"]
+}
